tools/tests/errors/surf_lex_09.experr
error: invalid numeric literal '0o'